# AG_Repositorio

./: .cpanel.yml  README.md  Test.txt  index.html
Jk/: CMakeLists.txt  bones.cpp
Tarea 2/: CMakeLists.txt  Ejercicio1.cpp  Ejercicio2.cpp  Ejercicio3.cpp  Ejercicio4.cpp  Ejercicio5.cpp  Ejercicio6.cpp
estadio/: CMakeLists.txt  practica.cpp
